fix: adding background colour to panel to try and fix scrolling issue on mobile

--- a/components/atoms/Panel/panel.module.scss
+++ b/components/atoms/Panel/panel.module.scss
@@ -16,7 +16,7 @@
 
 @include mq($from: tablet) {
   .panel {
-    height:calc(100% - 85px);
+    height:calc(100% - 10px);
   }
 }
 
